--- a/src/pages/page-schedule/page-schedule.pug
+++ b/src/pages/page-schedule/page-schedule.pug
@@ -138,7 +138,7 @@ block content
         }
         ];
 
-    menu(type="toolbar" role="menu").navigation.container
+    menu().navigation.container
         li(role="menuitem").navigation__item
             button(type="button" data-class="state-0-all" aria-label="State of page 1").navigation__btn.active-state State 1
         li(role="menuitem").navigation__item
@@ -168,7 +168,7 @@ block content
                     li(role="presentation" aria-label="Class of educational program").heading__item.Heading-large Class
                     li(role="presentation" aria-label="Coach of educational program").heading__item.Heading-large.coach Coach
                     li(role="presentation" aria-label="Level of educational program").heading__item.Heading-large.level Level
-            article(role="main").main__section.section
+            section(role="main").main__section.section
                 article(role="main").section__item
                     h2(role="presentation" aria-label="Monday").section__day.Heading Monday
                         i.arrow-down
