--- a/src/pages/page-schedule/page-schedule.pug
+++ b/src/pages/page-schedule/page-schedule.pug
@@ -138,7 +138,7 @@ block content
         }
         ];
 
-    menu().navigation.container
+    ul(role='menu').navigation.container
         li(role="menuitem").navigation__item
             button(type="button" data-class="state-0-all" aria-label="State of page 1").navigation__btn.active-state State 1
         li(role="menuitem").navigation__item
